--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "angularfire2": "^4.0.0-rc0",
+    "cordova-ubuntu": "^4.3.4",
+    "firebase": "^4.1.3",
     "ionic-angular": "3.5.3",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.0.2",
+    "@ionic/cli-plugin-cordova": "1.4.1",
     "@ionic/cli-plugin-ionic-angular": "1.3.2",
     "typescript": "2.3.4"
   },
